syntax = "proto3";

package supervisor;

message Node {
    string id = 1;
    NodeType type = 2;
    enum NodeType {
        Leader = 0;
        Member = 1;
    }
}

message RegisterNodeRequest {
    Node node = 1;
}

message RegisterNodeResponse {
    bool result = 1;
    int32 id = 2;
}

message LeaderStatusRequest {
    // Node id
    string id = 1;
}

message LeaderStatusResponse {
    // Node id
    string dependentID = 1;
}

message MemberStatusRequest {
    // Node id
    string id = 1;
}

message MemberStatusResponse {
    // Node id
    string dependentID = 1;
}

service Supervise {
    rpc Register(RegisterNodeRequest) returns (RegisterNodeResponse);

    rpc WatchLeader(LeaderStatusRequest) returns (LeaderStatusResponse);

    rpc WatchMember(MemberStatusRequest) returns (stream MemberStatusResponse);
}
